--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <img src="./photo by iphone/172546_search_icon.png" height="15px" class="header-logo">
                 <img src="./photo by iphone/290141_bag_case_handbag_purse_shopping_icon.png" height="15px"
                     class="header-logo">
+
             </div>
         </div>
         <div class="header-bottom">
@@ -41,12 +42,13 @@
             </div>
         </div>
     </header>
+    
 
     <div class="item-1">
         <div class="box-1">
             <div class="item-in-box-1">
                 <p>Special Carrier Deals</p>
-                <a href="#">See all deals</a>
+                <a href="#" class="modal-open">See all deals</a>
             </div>
             <div class="item-in-box">
                 <div class="logo-box"><img src="./photo by iphone/desktop-bfe-iphone-step1-bugatti-banner-att.png"
@@ -126,7 +128,7 @@
 
 
              <h1 class="h1-parametr-2">Storage. <span>How much space do <br> you need?</span></h1>
-             <div class="iphone-14-block">
+             <div class="iphone-14-block mamory-block">
                 <div class="iphone-14-left">
                     <p class="p-iphone-14-3">128 GB<sup>2</sup></p>
                 </div>
@@ -137,7 +139,7 @@
                     <p class="p-iphone-14-right4">trade‑in*</p>
                 </div>
              </div>
-             <div class="iphone-14-block">
+             <div class="iphone-14-block mamory-block">
                 <div class="iphone-14-left">
                     <p class="p-iphone-14-3">256 GB<sup>2</sup></p>
                 </div>
@@ -148,7 +150,7 @@
                     <p class="p-iphone-14-right4">trade‑in*</p>
                 </div>
              </div>
-             <div class="iphone-14-block">
+             <div class="iphone-14-block mamory-block">
                 <div class="iphone-14-left">
                     <p class="p-iphone-14-3">512 GB<sup>2</sup></p>
                 </div>
@@ -166,9 +168,129 @@
              <button id="minus" class="minus-num">-</button> <br>
              <button id="random" class="random-num">Случайное число</button>
             </div>
-
           </div>
     </div>
+    
+
+    <div class="modal-bg"></div>
+    <div class="modal">
+        <button class="btn-close"><img src="./photo by iphone/4115230_cancel_close_delete_icon.png" width="20px"></button>
+        <div class="container-modal">
+            <div class="modal-top">
+        <h1>Special Deals</h1>
+        <p>Take advantage of special carrier deals when you buy your new iPhone from Apple. If you have any questions, <a href="#">we’re here to help.</a></p>
+        <button class="company-1">AT&T</button>
+        <button class="company-2">verizon</button> <br>
+        <select class="option-iphone">
+            <option value="">iPhone 14</option>
+            <option value="">iPhone 14 Pro</option>
+            <option value="">iPhone 14 Pro Max</option>
+            <option value="">iPhone 14 Mini</option>
+            <option value="">iPhone 14 Lite</option>
+        </select>
+        <p class="modal-top-p">For existing and new AT&T customers</p>
+        </div>
+    </div> 
+    <div class="modal-center">
+        <div class="container-modal">
+            <div class="chevron-block">
+             <button class="iPhone-14-button">
+                <h1>iPhone 14 Pro</h1>
+                <img src="./photo by iphone/8666558_chevron_down_icon.png" height="50px" width="50px" class="chavron-img">
+            </button>
+             <hr>
+             <div class="chavron-1-all">
+             <div class="chevron-1">
+                <div class="chevron-1-left">
+                    <p>Cost</p>
+                </div>
+                <div class="chevron-1-right">
+                    <h3>iPhone 14 Pro</h3> <br>
+                    <h3>From $5.53/mo. <br> over 36 mo. after trade-inΔ</h3>
+                    <p>Up to three monthly payments of $27.75 before AT&T bill credits begin.</p> <br>
+                    <h2>$999.00</h2>
+                    <p>Total amount financed at 0% APR</p>
+                    <p>This is the total cost of your new iPhone before AT&T bill credits.</p>
+                </div>
+             </div>
+             <hr>
+             <div class="chevron-2">
+                <div class="chevron-2-left">
+                    <p>Credits Discounts</p>
+                </div>
+                <div class="chevron-2-right">
+                    <h3>$800.00Δ</h3> 
+                    <p  class="chavron-2-p-2">Total bill credits for: iPhone 12 Pro</p> 
+                    <p class="chavron-2-p">Bill credits will be applied to your AT&T bill over 36 months and will begin within three bill cycles. If you have any questions about your billing, contact AT&T.</p>
+                </div>
+             </div>
+             <hr>
+             <div class="chavron-3">
+                <div class="chevron-2-left">
+                    <p>How to Get this Deal</p>
+                </div>
+                <div class="chavron-3-right">
+                    <p>1. Trade in an eligible smartphone.</p>
+                    <p>2. Select AT&T Installment Plans as your monthly payment option — available to new and existing AT&T customers who want to upgrade or add a line.</p>
+                    <p>3. Activate with an eligible AT&T rate plan.</p>
+                </div>
+             </div>
+             <hr>
+            </div>
+
+            <button class="iPhone-14-max-button">
+                <h1>iPhone 14 Pro Max</h1>
+                <img src="./photo by iphone/8666558_chevron_down_icon.png" height="50px" width="50px" class="chavron-img-2">
+            </button>
+
+            <div class="chavron-2-all">
+                <div class="chevron-1">
+                   <div class="chevron-1-left">
+                       <p>Cost</p>
+                   </div>
+                   <div class="chevron-1-right">
+                       <h3>iPhone 14 Pro Max</h3> <br>
+                       <h3>From $8.31/mo. <br> over 36 mo. after trade-inΔ</h3>
+                       <p>Up to three monthly payments of $30.53 before AT&T bill credits begin.</p> <br>
+                       <h2>$1099.00</h2>
+                       <p>Total amount financed at 0% APR</p>
+                       <p>This is the total cost of your new iPhone before AT&T bill credits.</p>
+                   </div>
+                </div>
+                <hr>
+                <div class="chevron-2">
+                   <div class="chevron-2-left">
+                       <p>Credits Discounts</p>
+                   </div>
+                   <div class="chevron-2-right">
+                       <h3>$800.00Δ</h3> 
+                       <p  class="chavron-2-p-2">Total bill credits for: iPhone 12 Pro</p> 
+                       <p class="chavron-2-p">Bill credits will be applied to your AT&T bill over 36 months and will begin within three bill cycles. If you have any questions about your billing, contact AT&T.</p>
+                   </div>
+                </div>
+                <hr>
+                <div class="chavron-3">
+                   <div class="chevron-2-left">
+                       <p>How to Get this Deal</p>
+                   </div>
+                   <div class="chavron-3-right">
+                       <p>1. Trade in an eligible smartphone.</p>
+                       <p>2. Select AT&T Installment Plans as your monthly payment option — available to new and existing AT&T customers who want to upgrade or add a line.</p>
+                       <p>3. Activate with an eligible AT&T rate plan.</p>
+                   </div>
+                </div>
+                <hr>
+               </div>
+            </div>
+          <div class="p-text">
+            <p>∆ AT&T Special Deal: Monthly price reflects net monthly payment, after application of AT&T trade-in credit applied over 36 months with purchase of an iPhone 14 Pro, iPhone 14 Pro Max, iPhone 14, or iPhone 14 Plus and trade-in of eligible smartphone. Receive credit with purchase of an iPhone 14, iPhone 14 Plus, iPhone 14 Pro, or iPhone 14 Pro Max of either $800 or $350 (based upon the model and condition of your trade-in smartphone), max bill credits will not exceed the cost of the device. Requires upgrade of an existing line or activation of a new line and purchase of a new iPhone 14, iPhone 14 Plus, iPhone 14 Pro, or iPhone 14 Pro Max on qualifying 36 month 0% APR installment plan, subject to carrier credit qualification. AT&T Installment Plan with Next Up is not eligible for this promotion. $0 down for well qualified customers only, or down payment may be required and depends on a variety of factors. Tax on full retail price due at sale. Requires activation on eligible unlimited plan. If you cancel eligible wireless service, credits will stop and you will owe the remaining device balance. Activation/Upgrade Fee: $35. Trade in device may not be on existing installment plan. Bill credits are applied as a monthly credit over the 36 month installment plan. Credits start within 3 bills. Will receive catchup credits once credits start. Wireless line must be on an installment agreement, active, and in good standing for 30 days to qualify. Installment agreement starts when device is shipped. To get all credits, device must remain on agreement for entire term and you must keep eligible service on device for entire installment term. Limited time offer; subject to change. Limits: one trade-in per qualifying purchase and one credit per line. May not be combinable with other offers, discounts, or credits. Purchase, financing, other limits, and restrictions apply. Price for iPhone 14 and iPhone 14 Plus includes $30 AT&T connectivity discount. Activation required.</p>
+             <br>
+            <p>◊◊ Trade-in values will vary based on the condition, year, and configuration of your eligible trade-in device. Not all devices are eligible for credit. You must be at least 18 years old to be eligible to trade in for credit or for an Apple Gift Card. Trade-in value may be applied toward qualifying new device purchase, or added to an Apple Gift Card. Actual value awarded is based on receipt of a qualifying device matching the description provided when estimate was made. Sales tax may be assessed on full value of a new device purchase. In-store trade-in requires presentation of a valid photo ID (local law may require saving this information). Offer may not be available in all stores, and may vary between in-store and online trade-in. Some stores may have additional requirements. Apple or its trade-in partners reserve the right to refuse or limit quantity of any trade-in transaction for any reason. More details are available from Apple’s trade-in partner for trade-in and recycling of eligible devices. Restrictions and limitations may apply.</p>
+          </div>
+        </div>
+    </div>
+</div>
+
 
 
     <script src="./script.js"></script>
